add network desing fairness constraint

--- a/network_design_distribution.ipynb
+++ b/network_design_distribution.ipynb
@@ -205,7 +205,7 @@
     "    PRAGMA table_info(rule2);\n",
     "    '''\n",
     "    test_query(query)\n",
-    " \n",
+    "    conn.close()\n",
     "\n",
     "ground_distribution()\n"
    ]
