commit all changes

--- a/network_design_distribution.ipynb
+++ b/network_design_distribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -78,35 +78,14 @@
       "(0, 'node1', 'NUM', 0, None, 0)\n",
       "(1, 'node2', 'NUM', 0, None, 0)\n",
       "(2, 't1', 'REAL', 0, None, 0)\n",
-      "(3, 't2', 'REAL', 0, None, 0)\n",
-      "\n",
-      "Rule2\n",
-      "==========\n",
-      "('c3', 'c4', 1.0, None)\n",
-      "('c2', 'c3', 1.0, None)\n",
-      "('c3', 'c0', 1.0, None)\n",
-      "('c1', 'c0', 1.0, None)\n",
-      "('c2', 'c0', 1.0, None)\n",
-      "('c0', 'c1', 1.0, None)\n",
-      "('c4', 'c2', 1.0, None)\n",
-      "('c2', 'c4', 1.0, None)\n",
-      "\n",
-      "Rule2-info\n",
-      "==========\n",
-      "(0, 'node1', 'NUM', 0, None, 0)\n",
-      "(1, 'node2', 'NUM', 0, None, 0)\n",
-      "(2, 't1', 'REAL', 0, None, 0)\n",
       "(3, 't2', 'REAL', 0, None, 0)\n"
      ]
     }
    ],
    "source": [
-    "def ground_distribution():\n",
+    "def ground_distribution1():\n",
     "    # ~presents(a,b)\n",
     "    # ~edge(a,b)->~presents(a,b)\n",
-    "    # edge(s,t1) & edge(t1,t2) & ~presents(t1,t2) -> ~presents(s,t1)\n",
-    "    # edge(s,t1) & edge(s,t2) & ~present(s,t2) -> ~presents(s,t1)\n",
-    "    \n",
     "    \n",
     "    print('\\nEdges\\n%s'%('='*10))\n",
     "    \n",
@@ -169,13 +148,51 @@
     "    PRAGMA table_info(rule1);\n",
     "    '''\n",
     "    test_query(query)\n",
+    "     \n",
+    "ground_distribution1()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Rule2\n",
+      "==========\n",
+      "('c3', 'c4', 1.0, None)\n",
+      "('c2', 'c3', 1.0, None)\n",
+      "('c3', 'c0', 1.0, None)\n",
+      "('c1', 'c0', 1.0, None)\n",
+      "('c2', 'c0', 1.0, None)\n",
+      "('c0', 'c1', 1.0, None)\n",
+      "('c4', 'c2', 1.0, None)\n",
+      "('c2', 'c4', 1.0, None)\n",
+      "\n",
+      "Rule2-info\n",
+      "==========\n",
+      "(0, 'node1', 'NUM', 0, None, 0)\n",
+      "(1, 'node2', 'NUM', 0, None, 0)\n",
+      "(2, 't1', 'REAL', 0, None, 0)\n",
+      "(3, 't2', 'REAL', 0, None, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ground_distribution2():    \n",
     "    \n",
-    "    \n",
+    "     #Ground rule 2:\n",
     "    print('\\nRule2\\n%s'%('='*10))\n",
     "    query = 'DROP TABLE IF EXISTS rule2'\n",
     "    c.execute(query)\n",
     "    conn.commit()\n",
-    "    \n",
+    "\n",
     "    query = '''\n",
     "    CREATE TABLE rule2\n",
     "    AS\n",
@@ -205,10 +222,180 @@
     "    PRAGMA table_info(rule2);\n",
     "    '''\n",
     "    test_query(query)\n",
-    "    conn.close()\n",
-    "\n",
-    "ground_distribution()\n"
+    "    \n",
+    "ground_distribution2()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Rule3\n",
+      "==========\n",
+      "\n",
+      "Temprule13-info\n",
+      "==========\n",
+      "(0, 'node1', 'NUM', 0, None, 0)\n",
+      "(1, 'node2', 'NUM', 0, None, 0)\n",
+      "(2, 'node3', 'NUM', 0, None, 0)\n",
+      "(3, 't1', 'REAL', 0, None, 0)\n",
+      "(4, 't2', 'REAL', 0, None, 0)\n",
+      "\n",
+      "Temprule23-info\n",
+      "==========\n",
+      "(0, 'node1', 'NUM', 0, None, 0)\n",
+      "(1, 'node2', 'NUM', 0, None, 0)\n",
+      "(2, 'node3', 'NUM', 0, None, 0)\n",
+      "(3, 't1', 'REAL', 0, None, 0)\n",
+      "(4, 't2', 'REAL', 0, None, 0)\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "near \"as\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-4c273627713e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 104\u001b[0;31m \u001b[0mground_distribution3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-27-4c273627713e>\u001b[0m in \u001b[0;36mground_distribution3\u001b[0;34m()\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0mSELECT\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtemp1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m     '''\n\u001b[0;32m---> 88\u001b[0;31m     \u001b[0mtest_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m     query = '''\n",
+      "\u001b[0;32m<ipython-input-3-e7cd8c5ada35>\u001b[0m in \u001b[0;36mtest_query\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtest_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"as\": syntax error"
+     ]
+    }
+   ],
+   "source": [
+    "def ground_distribution3():     \n",
+    "    # edge(s,t1) & edge(t1,t2) & ~presents(t1,t2) -> ~presents(s,t1)\n",
+    "    # edge(s,t1) & edge(s,t2) & ~present(s,t2) -> ~presents(s,t1)\n",
+    "    #Ground rule 3:\n",
+    "    \n",
+    "    print('\\nRule3\\n%s'%('='*10))\n",
+    "    query = 'DROP TABLE IF EXISTS temprule13'\n",
+    "    c.execute(query)\n",
+    "    conn.commit()\n",
+    "    \n",
+    "    query = '''\n",
+    "    CREATE TABLE temprule13\n",
+    "    AS\n",
+    "    WITH temp1 AS\n",
+    "    (\n",
+    "    SELECT edges.node1 as node1, edges.node2 as node2, presents.node2 as node3, \n",
+    "    edges.truth as t1, presents.truth as t2\n",
+    "    FROM \n",
+    "    presents\n",
+    "    INNER JOIN \n",
+    "    edges\n",
+    "    ON presents.node1 = edges.node2 \n",
+    "    )\n",
+    "    SELECT * from temp1\n",
+    "    '''\n",
+    "    \n",
+    "    test_query(query)\n",
+    "    \n",
+    "    \n",
+    "    print('\\nTemprule13-info\\n%s'%('='*10))\n",
+    "    \n",
+    "    query = '''\n",
+    "    PRAGMA table_info(temprule13);\n",
+    "    '''\n",
+    "    test_query(query)\n",
+    "    \n",
+    "    \n",
+    "    query = 'DROP TABLE IF EXISTS temprule23'\n",
+    "    c.execute(query)\n",
+    "    conn.commit()\n",
+    "    \n",
+    "    query = '''\n",
+    "    CREATE TABLE temprule23\n",
+    "    AS\n",
+    "    WITH temp1 AS\n",
+    "    (\n",
+    "    SELECT edges.node1 as node1, edges.node2 as node2, presents.node2 as node3, \n",
+    "    edges.truth as t1, presents.truth as t2\n",
+    "    FROM \n",
+    "    presents\n",
+    "    INNER JOIN \n",
+    "    edges\n",
+    "    ON presents.node2 = edges.node1 \n",
+    "    )\n",
+    "    SELECT * from temp1\n",
+    "    '''\n",
+    "    \n",
+    "    test_query(query)\n",
+    "    \n",
+    "    print('\\nTemprule23-info\\n%s'%('='*10))\n",
+    "    \n",
+    "    query = '''\n",
+    "    PRAGMA table_info(temprule23);\n",
+    "    '''\n",
+    "    test_query(query)\n",
+    "     \n",
+    "    query = 'DROP TABLE IF EXISTS rule3'\n",
+    "    c.execute(query)\n",
+    "    conn.commit()\n",
+    "    \n",
+    "    query = '''\n",
+    "    CREATE TABLE rule3\n",
+    "    AS\n",
+    "    WITH temp1 AS\n",
+    "    (\n",
+    "    SELECT temprule13.node1 as node1 as temprule13.node2 as node2, temprule13.node3 as node3, \n",
+    "    temprule13.t1 as t1, temprule23.t1 as t2, temprule13.t2 as t3, temprule23.t2 as t4\n",
+    "    FROM \n",
+    "    temprule13\n",
+    "    INNER JOIN \n",
+    "    temprule23\n",
+    "    ON temprule13.node1 = temprule23.node3 AND \n",
+    "    temprule13.node2 = temprule23.node1 AND \n",
+    "    temprule13.node3 = temprule23.node2\n",
+    "    )\n",
+    "    SELECT * from temp1\n",
+    "    '''\n",
+    "    test_query(query)\n",
+    "    \n",
+    "    query = '''\n",
+    "    SELECT * from rule3\n",
+    "    '''\n",
+    "    test_query(query)\n",
+    "    \n",
+    "    print('\\nRule3-info\\n%s'%('='*10))\n",
+    "    \n",
+    "    query = '''\n",
+    "    PRAGMA table_info(rule3);\n",
+    "    '''\n",
+    "    test_query(query)\n",
+    "    \n",
+    "    conn.close() \n",
+    "    \n",
+    "ground_distribution3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
