--- a/data/graph_generator.ipynb
+++ b/data/graph_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def create_synthetic_viral_marketing_graph(n,m,p):\n",
+    "def create_synthetic_viral_marketing(n,m,p):\n",
     "    graph = networkx.powerlaw_cluster_graph(n, m, p, seed=None)\n",
     "    return graph\n",
     "\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -192,6 +192,23 @@
    "source": [
     "epinion_file = \"./soc-Epinions1.txt\"\n",
     "get_epinion_info(epinion_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "n = 20\n",
+    "m = 6\n",
+    "p = 0.3\n",
+    "edge_file = \"../sample/trust-20.txt\"\n",
+    "node_file = \"../sample/user-20.txt\"\n",
+    "sensitive_file = \"../sample/sensitive-20.txt\"\n",
+    "making_synthetic_viral_marketing_data(n, m, p, edge_file, node_file, sensitive_file)"
    ]
   },
   {
