add dtproblog generator+sample for 12 and 14

--- a/data/sample_generator.ipynb
+++ b/data/sample_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -10,7 +10,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append(\"/Users/Gfarnadi/Movies/problog/problogBitBucket\")\n",
+    "sys.path.append(os.environ[\"PROBLOG_HOME\"])\n",
     "import problog\n",
     "from problog.tasks import sample\n",
     "from problog.program import PrologString"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -148,9 +148,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{trusts(martijn,bernd): False, trusts(ingo,theo): True, trusts(ingo,martijn): True, trusts(bernd,theo): True, trusts(bernd,golnoosh): False, trusts(bernd,ingo): True, trusts(guy,martijn): False, trusts(laura,angelika): True}\n",
-      "{trusts(martijn,bernd): True, trusts(ingo,theo): False, trusts(ingo,martijn): True, trusts(bernd,theo): False, trusts(bernd,golnoosh): False, trusts(bernd,ingo): True, trusts(guy,martijn): True, trusts(laura,angelika): True}\n",
-      "{trusts(martijn,bernd): False, trusts(ingo,theo): True, trusts(ingo,martijn): False, trusts(bernd,theo): True, trusts(bernd,golnoosh): False, trusts(bernd,ingo): False, trusts(guy,martijn): True, trusts(laura,angelika): False}\n"
+      "{trusts(martijn,bernd): False, trusts(bernd,golnoosh): False, trusts(guy,martijn): False, trusts(ingo,martijn): True, trusts(laura,angelika): False, trusts(ingo,theo): False, trusts(bernd,theo): False, trusts(bernd,ingo): True}\n",
+      "{trusts(martijn,bernd): False, trusts(bernd,golnoosh): False, trusts(guy,martijn): True, trusts(ingo,martijn): False, trusts(laura,angelika): False, trusts(ingo,theo): True, trusts(bernd,theo): True, trusts(bernd,ingo): False}\n",
+      "{trusts(martijn,bernd): True, trusts(bernd,golnoosh): False, trusts(guy,martijn): False, trusts(ingo,martijn): True, trusts(laura,angelika): False, trusts(ingo,theo): False, trusts(bernd,theo): False, trusts(bernd,ingo): True}\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -276,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "sample_graph_path = \"../sample_graphs/\"\n",
-    "save_samples(sample_graph_path, node_size = 50, sample_size = 1000)"
+    "save_samples(sample_graph_path, node_size = 14, sample_size = 1000)"
    ]
   },
   {
@@ -1069,6 +1069,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
