fix problog and dtproblog models

--- a/data/dtproblog_program_generator.ipynb
+++ b/data/dtproblog_program_generator.ipynb
@@ -94,8 +94,9 @@
     "    for user in user_list:\n",
     "        text+= \"person(\"+str(user)+\").\\n\"\n",
     "        \n",
-    "    text +=\" trusts(X,Y) :- trusts_directed(X,Y).\\n\"\n",
-    "    text +=\"trusts(X,Y) :- trusts_directed(Y,X).\\n\"\n",
+    "    text +=\"0.4:: trusts(X,Y) :- trusts_directed(Y,X).\\n\"\n",
+    "    text +=\"0.4:: trusts(X,Y) :- trusts_directed(X,Y).\\n\"\n",
+    "    text +=\"0.3:: trusts(X,Y) :- trusts_directed(X,Z), trusts(Z,Y).\\n\"\n",
     "    \n",
     "    for edge in edge_list:\n",
     "        text+= \"trusts_directed(\"+str(edge[0])+\",\"+str(edge[1])+\").\\n\" \n",
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -414,8 +415,9 @@
     "        model_text+='\\n'\n",
     "        model_text+='person(%s).'%user\n",
     "        model_text+='\\n'\n",
-    "    model_text+='trusts(X,Y) :- trusts_directed(X,Y).'+'\\n'\n",
-    "    model_text+='trusts(X,Y) :- trusts_directed(Y,X).'+'\\n'\n",
+    "    model_text+=\"0.4:: trusts(X,Y) :- trusts_directed(Y,X).\\n\"\n",
+    "    model_text+=\"0.4:: trusts(X,Y) :- trusts_directed(X,Y).\\n\"\n",
+    "    model_text+=\"0.3:: trusts(X,Y) :- trusts_directed(X,Z), trusts(Z,Y).\\n\"\n",
     "    model_text+='0.2 :: buy_from_marketing(_).'+'\\n'\n",
     "    model_text+='0.3 :: buy_from_trust(_,_).'+'\\n'\n",
     "    for edge in edge_list:\n",
@@ -434,24 +436,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def generate_program(node_size):\n",
-    "    sample_graph_path = \"../sample_graphs/\"\n",
-    "    trust_file = sample_graph_path+\"trust-\"+str(node_size)+\".txt\"\n",
-    "    user_file = sample_graph_path+\"user-\"+str(node_size)+\".txt\"\n",
-    "    program_path = sample_graph_path+\"dtproblog_model-\"+str(node_size)+\".txt\"\n",
+    "    sample_graph_path = \"../sample_graphs2/\"\n",
+    "    trust_file = sample_graph_path+\"data/trust-\"+str(node_size)+\".txt\"\n",
+    "    user_file = sample_graph_path+\"data/user-\"+str(node_size)+\".txt\"\n",
+    "    program_path = sample_graph_path+\"model/dtproblog_model-\"+str(node_size)+\".txt\"\n",
     "    model_text = generate_probog_program(trust_file, user_file, program_path)\n",
     "    return model_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -469,13 +471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for node_size in [10,12,14,20,50]:\n",
+    "for node_size in [8,10,12,14,20]:\n",
     "    generate_program(node_size)\n",
     "    "
    ]
