--- a/data/graph_generator.ipynb
+++ b/data/graph_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,65 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 8)\n",
-      "(0, 9)\n",
-      "(0, 6)\n",
-      "(0, 7)\n",
-      "(1, 8)\n",
-      "(1, 6)\n",
-      "(1, 7)\n",
-      "(2, 8)\n",
-      "(2, 9)\n",
-      "(2, 6)\n",
-      "(3, 6)\n",
-      "(3, 7)\n",
-      "(4, 8)\n",
-      "(4, 6)\n",
-      "(4, 7)\n",
-      "(5, 9)\n",
-      "(5, 6)\n",
-      "(5, 7)\n",
-      "(6, 7)\n",
-      "(6, 8)\n",
-      "(6, 9)\n",
-      "(7, 9)\n",
-      "(8, 9)\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 10\n",
     "m = 6\n",
     "p = 0.2\n",
     "graph = networkx.powerlaw_cluster_graph(n, m, p, seed=None)\n",
-    "for edge in graph.edges():\n",
-    "    print(edge)\n",
-    "for node in list(graph):\n",
-    "    print(node)"
+    "#for edge in graph.edges():\n",
+    "#    print(edge)\n",
+    "#for node in list(graph):\n",
+    "#    print(node)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +63,7 @@
     "    node_text = ''\n",
     "    sensitive_text = ''\n",
     "    for edge in graph.edges():\n",
-    "        edge_txt = str(edge).replace(\"(\",\"\").replace(\")\",\"\").replace(\",\", \"/t\") \n",
+    "        edge_txt = str(edge).replace(\"(\",\"\").replace(\")\",\"\").replace(\",\", \"\\t\") \n",
     "        edge_text+=edge_txt+'\\n'\n",
     "    for node in list(graph):\n",
     "        node_text+=str(node)+'\\n'\n",
@@ -121,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -133,12 +93,12 @@
     "edge_file = \"./trust.txt\"\n",
     "node_file = \"./user.txt\"\n",
     "sensitive_file = \"./sensitive.txt\"\n",
-    "generate_synthetic_viral_marketing(n,m,p, edge_file, node_file, sensitive_file)"
+    "#generate_synthetic_viral_marketing(n,m,p, edge_file, node_file, sensitive_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -205,9 +165,9 @@
     "n = 20\n",
     "m = 6\n",
     "p = 0.3\n",
-    "edge_file = \"../sample/trust-20.txt\"\n",
-    "node_file = \"../sample/user-20.txt\"\n",
-    "sensitive_file = \"../sample/sensitive-20.txt\"\n",
+    "edge_file = \"../sample_graphs2/data/trust-20.txt\"\n",
+    "node_file = \"../sample_graphs2/data/user-20.txt\"\n",
+    "sensitive_file = \"../sample_graphs2/data/sensitive-20.txt\"\n",
     "making_synthetic_viral_marketing_data(n, m, p, edge_file, node_file, sensitive_file)"
    ]
   },
