fix dtproblog runner

--- a/data/dtproblog_runner.ipynb
+++ b/data/dtproblog_runner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,9 +87,10 @@
    },
    "outputs": [],
    "source": [
-    "model_path = '../sample_graphs2/model/'\n",
+    "model_path = '../sample_graphs2/'\n",
     "for node_size in [8,10,12,14]:\n",
-    "    run_dtproblog(node_size, model_path, output_file)"
+    "    output_file = model_path+'output/dtproblog_model-'+str(node_size)+'.txt'\n",
+    "    run_dtproblog(node_size, model_path+'model/', output_file)"
    ]
   }
  ],
