--- a/data/dtproblog_program_generator.ipynb
+++ b/data/dtproblog_program_generator.ipynb
@@ -76,314 +76,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def generate_dtproblog_program(edge_path, user_path, program_path):\n",
-    "    edge_list, user_list = get_list(edge_path, user_path)\n",
-    "    text = \"% Decisions\\n\"\n",
-    "    text +=\"? :: marketed(P) :- person(P).\\n\\n\"\n",
-    "    text +=\"% Utility attributes\\n\"\n",
-    "    text +=\"buys(P) => 5 :- person(P).\\n\"\n",
-    "    text +=\"marketed(P) => -2 :- person(P).\\n\"\n",
-    "    text +=\"% Probabilistic facts\\n\"\n",
-    "    text +=\"0.2 :: buy_from_marketing(_).\\n\"\n",
-    "    text +=\"0.3 :: buy_from_trust(_,_).\\n\"\n",
-    "    text +=\"% Background knowledge'\\n\"\n",
-    "    for user in user_list:\n",
-    "        text+= \"person(\"+str(user)+\").\\n\"\n",
-    "        \n",
-    "    text +=\"0.4:: trusts(X,Y) :- trusts_directed(Y,X).\\n\"\n",
-    "    text +=\"0.4:: trusts(X,Y) :- trusts_directed(X,Y).\\n\"\n",
-    "    text +=\"0.3:: trusts(X,Y) :- trusts_directed(X,Z), trusts(Z,Y).\\n\"\n",
-    "    \n",
-    "    for edge in edge_list:\n",
-    "        text+= \"trusts_directed(\"+str(edge[0])+\",\"+str(edge[1])+\").\\n\" \n",
-    "       \n",
-    "    text +=\"buys(X) :- buys(X,[X]).\\n\"\n",
-    "    text +=\"buys(X, _) :-\\n\"\n",
-    "    text +=\"    marketed(X),\\n\"\n",
-    "    text +=\"    buy_from_marketing(X).\\n\"\n",
-    "    text +=\"buys(X, Visited) :-\\n\"\n",
-    "    text +=\"    trusts(X,Y),\\n\"\n",
-    "    text +=\"    buy_from_trust(X,Y),\\n\"\n",
-    "    text +=\"    absent(Y,Visited),\\n\"\n",
-    "    text +=\"    buys(Y, [Y|Visited]).\\n\"\n",
-    "    text +=\"absent(_,[]).\\n\"\n",
-    "    text +=\"absent(X,[Y|Z]):-X \\= Y, absent(X,Z).\\n\"\n",
-    "\n",
-    "    \n",
-    "#    save_file(text,program_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#for person in ('angelika', 'guy', 'bernd', 'kurt', 'theo',\n",
-    "#               'martijn', 'laura','ingo'):\n",
-    "#    print('?::marketed(%s).'%person)\n",
-    "#     print('utility(buys(%s), 5).'%person)\n",
-    "#     print('utility(marketed(%s), -2).'%person)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "def solve_dtProblog():\n",
-    "    model= '''\n",
-    "    % Decisions\n",
-    "    ?::marketed(angelika).\n",
-    "    ?::marketed(guy).\n",
-    "    ?::marketed(bernd).\n",
-    "    ?::marketed(kurt).\n",
-    "    ?::marketed(theo).\n",
-    "    ?::marketed(martijn).\n",
-    "    ?::marketed(laura).\n",
-    "    ?::marketed(ingo).\n",
-    " \n",
-    "    utility(buys(angelika), 5).\n",
-    "    utility(marketed(angelika), -2).\n",
-    "    utility(buys(guy), 5).\n",
-    "    utility(marketed(guy), -2).\n",
-    "    utility(buys(bernd), 5).\n",
-    "    utility(marketed(bernd), -2).\n",
-    "    utility(buys(kurt), 5).\n",
-    "    utility(marketed(kurt), -2).\n",
-    "    utility(buys(theo), 5).\n",
-    "    utility(marketed(theo), -2).\n",
-    "    utility(buys(martijn), 5).\n",
-    "    utility(marketed(martijn), -2).\n",
-    "    utility(buys(laura), 5).\n",
-    "    utility(marketed(laura), -2).\n",
-    "    utility(buys(ingo), 5).\n",
-    "    utility(marketed(ingo), -2).\n",
-    "\n",
-    "    % Probabilistic facts\n",
-    "    0.2 :: buy_from_marketing(_).\n",
-    "    0.3 :: buy_from_trust(_,_).\n",
-    "\n",
-    "    % Background knowledge\n",
-    "    person(bernd).\n",
-    "    person(ingo).\n",
-    "    person(theo).\n",
-    "    person(angelika).\n",
-    "    person(guy).\n",
-    "    person(martijn).\n",
-    "    person(laura).\n",
-    "    person(kurt).\n",
-    "\n",
-    "    trusts(X,Y) :- trusts_directed(X,Y).\n",
-    "    trusts(X,Y) :- trusts_directed(Y,X).\n",
-    "\n",
-    "    trusts_directed(bernd,ingo).\n",
-    "    trusts_directed(ingo,theo).\n",
-    "    trusts_directed(theo,angelika).\n",
-    "    trusts_directed(bernd,martijn).\n",
-    "    trusts_directed(ingo,martijn).\n",
-    "    trusts_directed(martijn,guy).\n",
-    "    trusts_directed(guy,theo).\n",
-    "    trusts_directed(guy,angelika).\n",
-    "    trusts_directed(laura,ingo).\n",
-    "    trusts_directed(laura,theo).\n",
-    "    trusts_directed(laura,guy).\n",
-    "    trusts_directed(laura,martijn).\n",
-    "    trusts_directed(kurt,bernd).\n",
-    "\n",
-    "    buys(X) :-\n",
-    "         marketed(X),\n",
-    "         buy_from_marketing(X).\n",
-    "    buys(X) :-\n",
-    "         trusts(X,Y),\n",
-    "         buy_from_trust(X,Y),\n",
-    "         buys(Y).\n",
-    "'''\n",
-    "    program = PrologString(model)\n",
-    "    decisions, score, statistics = dtproblog(program)\n",
-    "\n",
-    "    for name, value in decisions.items():\n",
-    "        print ('%s: %s' % (name, value))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#%%time\n",
-    "#solve_dtProblog()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#4.2 / (2**7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#for x in (10, 12, 14):\n",
-    "#    t = 0.0328125 * (2**x)\n",
-    "#    print(x, t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def solve_dtProblog():\n",
-    "    model= '''\n",
-    "    0.3::rain.\n",
-    "    0.5::wind.\n",
-    "    ?::umbrella.\n",
-    "    ?::raincoat.\n",
-    "\n",
-    "    broken_umbrella :- umbrella, rain, wind.\n",
-    "    dry :- rain, raincoat.\n",
-    "    dry :- rain, umbrella, not broken_umbrella.\n",
-    "    dry :- not(rain).\n",
-    "\n",
-    "    utility(broken_umbrella, -40).\n",
-    "    utility(raincoat, -20).\n",
-    "    utility(umbrella, -2).\n",
-    "    utility(dry, 60).\n",
-    "'''\n",
-    "    program = PrologString(model)\n",
-    "    decisions, score, statistics = dtproblog(program)\n",
-    "\n",
-    "    for name, value in decisions.items():\n",
-    "        print ('%s: %s' % (name, value))\n",
-    "        \n",
-    "#solve_dtProblog()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from problog.program import PrologString\n",
-    "from problog import get_evaluatable\n",
-    "from problog.program import PrologFile\n",
-    "from problog.formula import LogicFormula\n",
-    "from problog.sdd_formula import SDD\n",
-    "from problog.cnf_formula import CNF\n",
-    "\n",
-    "def solve():\n",
-    "    model= '''\n",
-    "    % Decisions\n",
-    "    0.1::marketed(guy).\n",
-    "    0.2::marketed(bernd).\n",
-    "    0.5::marketed(ingo).\n",
-    "    0.3::marketed(theo).\n",
-    "\n",
-    "    % Probabilistic facts\n",
-    "    0.2 :: buy_from_marketing(_).\n",
-    "    0.3 :: buy_from_trust(_,_).\n",
-    "\n",
-    "    % Background knowledge\n",
-    "    person(bernd).\n",
-    "    person(ingo).\n",
-    "    person(theo).\n",
-    "    person(angelika).\n",
-    "    person(guy).\n",
-    "    person(martijn).\n",
-    "    person(laura).\n",
-    "    person(kurt).\n",
-    "\n",
-    "    trusts(X,Y) :- trusts_directed(X,Y).\n",
-    "    trusts(X,Y) :- trusts_directed(Y,X).\n",
-    "\n",
-    "    trusts_directed(bernd,ingo).\n",
-    "    trusts_directed(ingo,theo).\n",
-    "    trusts_directed(theo,angelika).\n",
-    "    trusts_directed(bernd,martijn).\n",
-    "    trusts_directed(ingo,martijn).\n",
-    "    trusts_directed(martijn,guy).\n",
-    "    trusts_directed(guy,theo).\n",
-    "    trusts_directed(guy,angelika).\n",
-    "    trusts_directed(laura,ingo).\n",
-    "    trusts_directed(laura,theo).\n",
-    "    trusts_directed(laura,guy).\n",
-    "    trusts_directed(laura,martijn).\n",
-    "    trusts_directed(kurt,bernd).\n",
-    "\n",
-    "    buys(X) :-\n",
-    "         marketed(X),\n",
-    "         buy_from_marketing(X).\n",
-    "    buys(X) :-\n",
-    "         trusts(X,Y),\n",
-    "         buy_from_trust(X,Y),\n",
-    "         buys(Y).\n",
-    "         \n",
-    "    query(buys(kurt)).\n",
-    "'''\n",
-    "    \n",
-    "    program = PrologString(model)\n",
-    "    formula = LogicFormula.create_from(program)\n",
-    "    sdd = SDD.create_from(formula)\n",
-    "    return sdd.evaluate()\n",
-    "\n",
-    "#%timeit solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "model_text = \"\"\n",
-    "for user in ['u1', 'u2']:\n",
-    "    model_text+='?::marketed(%s).'%user\n",
-    "    model_text+='\\n'\n",
-    "    model_text+='utility(buys(%s), 5).'%user\n",
-    "    model_text+='\\n'\n",
-    "    model_text+='utility(marketed(%s), -2).'%user\n",
-    "    model_text+='\\n'\n",
-    "#print(model_text)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -397,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def generate_probog_program(edge_path, user_path, program_path):\n",
+    "def generate_dtproblog_program(edge_path, user_path, program_path):\n",
     "    edge_list, user_list = get_list(edge_path, user_path)\n",
     "    model_text = \"\"\n",
     "    for user in user_list:\n",
@@ -415,9 +107,10 @@
     "        model_text+='\\n'\n",
     "        model_text+='person(%s).'%user\n",
     "        model_text+='\\n'\n",
-    "    model_text+=\"0.4:: trusts(X,Y) :- trusts_directed(Y,X).\\n\"\n",
-    "    model_text+=\"0.4:: trusts(X,Y) :- trusts_directed(X,Y).\\n\"\n",
-    "    model_text+=\"0.3:: trusts(X,Y) :- trusts_directed(X,Z), trusts(Z,Y).\\n\"\n",
+    "    model_text+=\"1.0:: trusts_undirected(X,Y) :- trusts_directed(X,Y).\\n\"\n",
+    "    model_text+=\"1.0:: trusts_undirected(X,Y) :- trusts_directed(Y,X).\\n\"\n",
+    "    model_text+=\"0.4:: trusts(X,Y) :- trusts_undirected(X,Y).\\n\"\n",
+    "    model_text+=\"0.3:: trusts(X,Y) :- trusts_undirected(X,Z), trusts(Z,Y).\\n\"\n",
     "    model_text+='0.2 :: buy_from_marketing(_).'+'\\n'\n",
     "    model_text+='0.3 :: buy_from_trust(_,_).'+'\\n'\n",
     "    for edge in edge_list:\n",
@@ -436,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -447,13 +140,13 @@
     "    trust_file = sample_graph_path+\"data/trust-\"+str(node_size)+\".txt\"\n",
     "    user_file = sample_graph_path+\"data/user-\"+str(node_size)+\".txt\"\n",
     "    program_path = sample_graph_path+\"model/dtproblog_model-\"+str(node_size)+\".txt\"\n",
-    "    model_text = generate_probog_program(trust_file, user_file, program_path)\n",
+    "    model_text = generate_dtproblog_program(trust_file, user_file, program_path)\n",
     "    return model_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -471,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
