changing quicksum to the sum function of the tupledict returned by addVars()

--- a/mip/mip_notebook.ipynb
+++ b/mip/mip_notebook.ipynb
@@ -67,10 +67,9 @@
     "                              for n in range(self.n_samples)\n",
     "                              if i != j)\n",
     "\n",
-    "        cost_expr = (2 * quicksum(self.M) -\n",
-    "                    (5 / self.n_samples) * quicksum(self.U))\n",
-    "        dist_expr = (quicksum(self.y) + quicksum(self.z) +\n",
-    "                    quicksum(self.U))\n",
+    "        cost_expr = (2 * self.M.sum() -\n",
+    "                    (5 / self.n_samples) * self.U.sum())\n",
+    "        dist_expr = self.y.sum() + self.z.sum() + self.U.sum()\n",
     "\n",
     "        self.model.setObjective(cost_expr + self.delta * dist_expr,\n",
     "                                GRB.MINIMIZE)\n",
